tests/ui/formatter/fail/uppercase_binary.stderr
error: placeholder spanning bytes 0..9 uses an unsupported formatter
 --> tests/ui/formatter/fail/uppercase_binary.rs:4:9
  |
4 | #[error("{value:B}")]
  |         ^^^^^^^^^^^

error: missing #[error(...)] attribute
 --> tests/ui/formatter/fail/uppercase_binary.rs:5:8
  |
5 | struct UppercaseBinary {
  |        ^^^^^^^^^^^^^^^
